# RoadMaker

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  ASSETS_LICENSES.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  NOTICE  README.md  THIRD_PARTY_LICENSES.md  imgui.ini
core/: CMakeLists.txt
core/include/roadmaker/: error.hpp  tol.hpp  version.hpp
core/src/: version.cpp
core/src/assets/: prop_meshes.gen.cpp  sign_face.cpp  sign_font.gen.cpp  sign_font.hpp
core/src/edit/: connection.cpp  edit_stack.cpp  markings.cpp  markings_detail.hpp  operations.cpp  snap.cpp
core/src/geometry/: profile_fit.cpp  reference_line.cpp  road_intersection.cpp
core/src/io/: gltf_exporter.cpp  mesh_export_common.hpp  usd_exporter.cpp
core/src/mesh/: bridge_solids.cpp  bridge_solids.hpp  fill_backend.hpp  junction_corner_detail.cpp  junction_corner_detail.hpp  junction_corners.cpp  junction_fill_spans.hpp  junction_maneuvers.cpp  junction_phases.cpp  junction_signals.cpp  junction_stoplines.cpp  junction_stoplines_detail.hpp  junction_surface.cpp  junction_surface.hpp  junction_surface_spans.cpp  manifold_bridge.cpp  manifold_bridge.hpp  mesh_builder.cpp  mesh_detail.hpp  surface_boundary.cpp  surface_fill.cpp  surface_fill.hpp  terrain_mesh.cpp  terrain_mesh.hpp
core/src/road/: authoring.cpp  grade_separation.cpp  network.cpp  repeat_expansion.cpp  road_style.cpp  surface_derivation.cpp  terrain.cpp  terrain_brush.cpp
core/src/xodr/: junction_export.cpp  junction_export.hpp  reader.cpp  signal_catalog.hpp  terrain_sidecar.cpp  writer.cpp
core/tests/: CMakeLists.txt  test_assembly.cpp  test_authoring.cpp  test_bridge_model.cpp  test_bridge_operations.cpp  test_bridge_solids.cpp  test_connection.cpp  test_controller.cpp  test_corner_operations.cpp  test_corner_persistence.cpp  test_edit_operations.cpp  test_edit_snap.cpp  test_edit_stack.cpp  test_gltf.cpp  test_grade_separation.cpp  test_id_arena.cpp  test_insert_node.cpp  test_junction_control.cpp  test_junction_corners.cpp  test_junction_crosswalks.cpp  test_junction_export.cpp  test_junction_lock_persistence.cpp  test_junction_maneuvers.cpp  test_junction_stoplines.cpp  test_junction_surface.cpp  test_lane_sections.cpp  test_lane_span.cpp  test_maneuver_persistence.cpp  test_manifold_bridge.cpp  test_marking_curves.cpp  test_material_roundtrip.cpp  test_merge_roads.cpp  test_mesh.cpp  test_network.cpp  test_object_ops.cpp  test_poly3.cpp  test_profile_fit.cpp  test_prop_library.cpp  test_raw_xml.cpp  test_reference_line.cpp  (+37 more)
core/tests/fuzz/: CMakeLists.txt  fuzz_xodr.cpp
core/tests/support/: network_compare.hpp
editor/: CMakeLists.txt
editor/help_compiler/: CMakeLists.txt  main.cpp
editor/help_compiler/helpc/: qhp.cpp  qhp.hpp  render.cpp  render.hpp  toc.cpp  toc.hpp
editor/resources/: resources.qrc
editor/resources/branding/: README.md  roadmaker.desktop  roadmaker.icns  roadmaker.rc
editor/resources/help/: help.css
editor/src/: main.cpp
editor/src/app/: actions.cpp  actions.hpp  app.cpp  app.hpp  context_menu.cpp  context_menu.hpp  crash_handler.cpp  crash_handler.hpp  elided_label.cpp  elided_label.hpp  icons.cpp  icons.hpp  log_setup.cpp  log_setup.hpp  main.cpp  main_window.cpp  main_window.hpp  settings.cpp  settings.hpp  shortcut_registry.cpp  shortcut_registry.hpp  tour_controller.cpp  tour_controller.hpp  tour_overlay.cpp  tour_overlay.hpp  welcome_widget.cpp  welcome_widget.hpp
editor/src/document/: autosave.cpp  autosave.hpp  crosswalk_item.cpp  crosswalk_item.hpp  crosswalk_placement.cpp  crosswalk_placement.hpp  diagnostic_locator.cpp  diagnostic_locator.hpp  diagnostics_model.cpp  diagnostics_model.hpp  document.cpp  document.hpp  editor_command.cpp  editor_command.hpp  elevation_utils.cpp  elevation_utils.hpp  (+29 more)
editor/tests/: CMakeLists.txt  qt_gtest_main.cpp  test_autosave.cpp  test_bridge_document.cpp  test_camera.cpp  test_context_menu.cpp  test_corner_tool.cpp  test_crash_handler.cpp  test_create_junction_tool.cpp  test_create_road_tool.cpp  test_crosswalk_item.cpp  test_crosswalk_placement.cpp  test_crosswalk_stop_line_tool.cpp  test_delete_tool.cpp  test_diagnostic_locator.cpp  test_diagnostics_model.cpp  test_document.cpp  test_document_commands.cpp  test_edit_nodes_tool.cpp  test_editor2d_host.cpp  test_editor_command.cpp  test_elevation_tool.cpp  test_framing.cpp  test_gizmo.cpp  test_help_collection.cpp  test_help_compiler.cpp  test_help_registry.cpp  test_help_style.cpp  test_help_viewer.cpp  test_highlight.cpp  test_icons.cpp  test_junction_regen.cpp  test_junction_span_tool.cpp  test_junction_surface_tool.cpp  test_lane_add_tool.cpp  test_lane_carve_tool.cpp  test_lane_form_tool.cpp  test_lane_profile.cpp  test_library_drop.cpp  test_library_model.cpp  (+47 more)
python/: CMakeLists.txt  README.md  pyproject.toml
python/examples/: apply_road_style.py  author_road.py  bridge_span.py  build_gs1.py  carve_turn_lane.py  close_gap.py  create_junction.py  crosswalk_assets.py  curve_markings_and_stencils.py  edit_network.py  elevation_profile.py  export_usd.py  ground_surface.py  insert_bend.py  junction_control.py  junction_corner_materials.py  junction_corner_radius.py  junction_crosswalks.py  junction_maneuvers.py  junction_stoplines.py  lane_material.py  lane_width_profile.py  load_and_export.py  merge_roads.py  move_road.py  place_objects.py  place_signals.py  road_marks.py  rotate_road.py  signal_phases.py  signalize_junction.py  t_junction.py  tee_onto_road.py  terrain_brush.py  terrain_field.py  x_intersection.py
python/src/: bindings.cpp
python/tests/: test_bridge.py  test_corner_materials.py  test_cross_roads.py  test_edit.py  test_extend_road.py  test_junction_corners.py  test_junction_lock.py  test_junction_stoplines.py  test_lane_sections.py  test_maneuvers.py  test_materials.py  test_objects.py  test_road_marks.py  test_road_style.py  test_roadmaker.py  test_signal_phases.py  test_signalization.py  test_signals.py  test_snap.py  test_surface_spans.py  test_surfaces.py  test_terrain.py
tests/consume_installed/: CMakeLists.txt  main.cpp
(+532 files in other folders)
